# agent_runtime

./: .gitignore  Cargo.toml
dump/: session_create
src/: lib.rs  main.rs
src/ollama/: client.rs  types.rs
src/session_creation/: mod.rs  session_create.rs  types.rs
src/session_inference/: mod.rs  prompt_builder.rs
src/session_manager/: mod.rs
src/session_start/: start.rs
