[package]
name = "agent_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }   # to serialize/deserialize structs
serde_json = "1"                                   # to debug-print sessions as JSON
uuid = { version = "1", features =  ["v4", "serde"] }        # to generate session IDs
chrono = { version = "0.4", features = ["serde"] } # for timestamps
thiserror = "1"
once_cell = "1"
dashmap = "5"

